# dotfiles

./: .bash_profile  .bashrc  .clang-format  .gitmodules  .zshrc  README.md  ZED_CHEATSHEET.md  desktop-install.sh  flake.nix  init.vim  install.sh  installed_packages.txt  result  style.yapf  sync.sh  tires.sh  update.sh
.config/alacritty/: alacritty.yml
.config/betterlockscreen/: betterlockscreenrc
.config/eww/: Cargo.toml  eww.scss  eww.yuck  flake.nix
.config/home-manager/: home.nix
.config/hypr/: hyprland.conf  hyprpaper.conf  reload.sh
.config/i3/: config  i3blocks.conf
.config/kitty/: kitty.conf
.config/lazygit/: config.yml
.config/nvim/: .luarc.json  init.lua  lazy-lock.json
.config/tmux/: tmux.conf
.config/waybar/: config  style.css
.config/zellij/: config.kdl
.config/zsh/: completion.zsh
alacritty/: alacritty.yml
files/dotfiles/: .zshrc
files/dotfiles/eww/: .gitignore  Cargo.toml  flake.nix  output.txt
home/: default.nix  editor.nix  hyprland.nix  neovim.nix  terminal.nix  zsh.nix
hosts/desktop/: default.nix  hardware-configuration.nix
hosts/laptop/: default.nix  hardware-configuration.nix
i3/: config  i3blocks.conf
i3blocks/: config
i3blocks/weather/: weather.sh
modules/: apps.nix  audio.nix  dev-tools.nix  embedded-dev.nix  fonts.nix  hyprland.nix  kde.nix  networking.nix  nvidia.nix  tailscale.nix  torrents.nix
nixos/: configuration.nix  flake.nix  hardware-configuration.nix  home.nix
nvim/: init.vim
regolith3/: Xresources
regolith3/i3/: config
regolith3/picom/: config
templates/: default.nix  flake.nix
(+21 files in other folders)
