[package]
name = "eww"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = "4.5.40"
gio = "0.18.2"
gtk = "0.18.2"
hyprrust = "0.2.0"
s-macro = "0.1.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["codec"] }
